// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render Textarea 1`] = `
<div>
  <textarea
    class="textarea "
    rows="2"
  >
    Initial value
  </textarea>
</div>
`;

exports[`Textarea should render disabled Textarea 1`] = `
<div>
  <textarea
    class="textarea "
    disabled=""
    rows="2"
  >
    Initial value
  </textarea>
</div>
`;
